--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -68,11 +68,11 @@
                     <h2>Local Photos of Interest</h2>
                     <div class="image-gallery">
                         <!-- Six optimized images with lazy loading -->
-                        <img src="Images/water.jpg" alt="Lagos Island" class="lazy-load" />
-                        <img src="Images/Lagos-skyline.jpg" alt="Lagos Skyline" class="lazy-load" />
-                        <img src="Images/lekki-conservation-centre.jpg" alt="Lekki Conservation Centre" class="lazy-load" />
-                        <img src="Images/market.png" alt="Marke" class="lazy-load" />
-                        <img src="Images/beach.jpg" alt="Oniru Beach" class="lazy-load" />
+                        <img src="images/water.jpg" alt="Lagos Island" class="lazy-load" />
+                        <img src="images/Lagos-skyline.jpg" alt="Lagos Skyline" class="lazy-load" />
+                        <img src="images/lekki-conservation-centre.jpg" alt="Lekki Conservation Centre" class="lazy-load" />
+                        <img src="images/market.png" alt="Marke" class="lazy-load" />
+                        <img src="images/beach.jpg" alt="Oniru Beach" class="lazy-load" />
                         <img src="images/train-station.jpg" alt="Ikeja Train Station" class="lazy-load" />
                     </div>
                 </section>
