--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <ul id="menu" class="hide">
         <li><a href="#" class="active">Home</a></li>
         <li><a href="https://emmanuelkelly29.github.io/wdd231/chamber/index.html">Chamber</a></li>
-        <li><a href="#">GitHub Profile</a></li>
-        <li><a href="#">LinkedIn</a></li>
+        <li><a href="https://github.com/Emmanuelkelly29">GitHub Profile</a></li>
+        <li><a href="https://www.linkedin.com/feed/">LinkedIn</a></li>
       </ul>
     </nav>
     <main>
