--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <img src="Images/profile.jpg" alt="Profile Picture" />
+      <img src="images/profile.jpg" alt="Profile Picture" />
       <span>Emmanuel Chinedu Kelikume</span>
       <button id="menu-toggle">☰</button>
     </header>
@@ -23,7 +23,7 @@
       <ul id="menu" class="hide">
         <li><a href="#" class="active">Home</a></li>
         <li><a href="https://emmanuelkelly29.github.io/wdd231/chamber/index.html">Chamber</a></li>
-        <li><a href="https://github.com/Emmanuelkelly29">GitHub Profile</a></li>
+        <li><a href="https://github.com/emmanuelkelly29">GitHub Profile</a></li>
         <li><a href="https://www.linkedin.com/feed/">LinkedIn</a></li>
       </ul>
     </nav>
@@ -40,7 +40,7 @@
       </section>
       <section class="location">
         <h2 class="location--1">Lagos, Nigeria</h2>
-        <img src="Images/lagos.jpeg" alt="Lagos" />
+        <img src="images/lagos.jpeg" alt="Lagos" />
         <p>Lagos</p>
       </div>
       </section>
@@ -71,7 +71,7 @@
         &copy; <span id="currentyear"></span> 🌺 Emmanuel Chinedu Kelikume 🌺
         Nigeria
       </p>
-      <img src="Images/nigeria-flag.png" alt="Nigerian Flag"/>
+      <img src="images/nigeria-flag.png" alt="Nigerian Flag"/>
       </div>
       <p id="lastModified">Last Update:</p>
     </footer>
