--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Emmanuel Kelikume">
     <meta property="og:title" content="Lagos Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="Image/logo.png">
+    <meta property="og:image" content="image/logo.png">
     <meta property="og:url" content="index.html">
     <title>Lagos Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" href="Images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <main>
         <!-- Hero Section -->
         <section id="hero">
-            <img src="Images/logo.jpg" alt="Lagos Chamber of Commerce" class="hero-image">
+            <img src="images/logo.jpg" alt="Lagos Chamber of Commerce" class="hero-image">
             <div class="hero-text">
                 <h2>Your Pathway to Professional Connections</h2>
                 <p>Become a part of our community to engage, expand, and thrive.</p>
