--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
       <div class="course-location">
       <section class="course-work">
         <h2 class="course-work--1">Course Work</h2>
+        
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>WDD231 - Frontend Development I</li>
+          <li>WDD131 - Dynamic Web Fundamentals</li>
+          <li>WDD130 - Web Fundamentals</li>
+          <li>CSE210 - Programming with Classes</li>
+          <li>CSE111 - Progamming with Functions</li>
+          <li>CSE110 - Intro to Programming</li>
         </ul>
       </section>
       <section class="location">
