--- a/chamber/join.html
+++ b/chamber/join.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Emmanuel Kelikume">
     <meta property="og:title" content="Lagos Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/logo.jpeg">
+    <meta property="og:image" content="images/logo.jpg">
     <meta property="og:url" content="https://Emmanuelkelly29.github.io/wdd231/chamber/join.html">
     <title>Lagos Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
