--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://Emmanuelkelly29.github.io/wdd231/chamber/join.html">
     <title>Lagos Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" href="Images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <script src="scripts/join.js" defer></script>
 </head>
 
