--- a/nutritious-bites-collection/index.html
+++ b/nutritious-bites-collection/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Emmanuel Kelikume">
     <meta property="og:title" content="Nutritious Bites Collection">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="Image/logo.png">
+    <meta property="og:image" content="image/logo.png">
     <meta property="og:url" content="https://emmanuelkelly29.github.io/wdd231/nutritious-bites-collection/index.html">
     <title>Nutritious Bites Collection</title>
     <link rel="stylesheet" href="styles/styles.css">
