--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,18 +9,23 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="chamber/image/logo.png">
     <meta property="og:url" content="directory.html">
-    <title>Events - Lagos Chamber of Commerce</title>
     <title>Directory - Lagos Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
-        <h1>Lagos Chamber of Commerce Directory</h1>
+        <div class="header-content">
+            <h1>Lagos Chamber of Commerce Directory</h1>
+            <button class="menu-toggle" aria-label="Toggle navigation menu">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
         <nav>
-            <ul>
+            <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html">Directory</a></li>
+                <li><a href="directory.html" class="active">Directory</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -28,23 +33,49 @@
         </nav>
     </header>
     <main>
-        <h2>Our Members</h2>
-        <div class="view-toggle">
-            <button id="grid-view-btn">Grid View</button>
-            <button id="list-view-btn">List View</button>
+        <div class="content-grid">
+            <section class="directory-section">
+                <h2>Our Members</h2>
+                <div class="view-toggle">
+                    <button id="grid-view-btn" class="secondary-cta">
+                        <i class="fas fa-th"></i> Grid View
+                    </button>
+                    <button id="list-view-btn" class="secondary-cta">
+                        <i class="fas fa-list"></i> List View
+                    </button>
+                </div>
+                <section id="member-list" class="grid"></section>
+            </section>
         </div>
-        <section id="member-list" class="grid"></section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; <span id="current-year"></span> Lagos Chamber of Commerce</p>
-        <p>Last modified: <span id="last-modified"></span></p>
-        <p>Developed by Emmanuel Kelikume, WDD231</p>
+        <div class="footer-content">
+            <p>&copy; <span id="current-year"></span> Lagos Chamber of Commerce</p>
+            <p>Last modified: <span id="last-modified"></span></p>
+            <p>Developed by Emmanuel Kelikume, WDD231</p>
+        </div>
     </footer>
 
     <!-- Scripts -->
     <script src="scripts/directory.js"></script>
+    <script>
+        // Update copyright year and last modified date
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+        document.getElementById('last-modified').textContent = document.lastModified;
+
+        // Mobile menu toggle
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.getElementById('nav-menu').classList.toggle('show');
+        });
+
+        // Add active class to current page link
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentPage = window.location.pathname.split('/').pop() || 'index.html';
+            document.querySelector(`nav a[href="${currentPage}"]`)?.classList.add('active');
+        });
+    </script>
 </body>
 </html>
 
